Moving mate-cursor into mate-themes (https://github.com/Perberos/Mate-Desktop-Environment/issues/9)

--- a/mate-themes/configure.in
+++ b/mate-themes/configure.in
@@ -60,7 +60,7 @@ AC_ARG_ENABLE([placeholders],
 			[Enable placeholder icons [default=auto]]),
 	enable_placeholders=$enableval,
 	enable_placeholders=$placeholders_policy)
-	      
+
 AM_CONDITIONAL(PLACEHOLDERS, test "x$enable_placeholders" != "xno")
 
 # Configure option to force icon mapping
@@ -180,6 +180,7 @@ AC_CONFIG_FILES([
 Makefile
 mate-themes.spec
 common/Makefile
+cursor-themes/Makefile
 desktop-themes/Makefile
 desktop-themes/aldabra//Makefile
 desktop-themes/aldabra/gtk-2.0/Makefile
