gnome3 conflicts with menu

--- a/mate-menus/Makefile.am
+++ b/mate-menus/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = libmenu desktop-directories layout util po
 
 if HAVE_PYTHON
-SUBDIRS += python simple-editor
+SUBDIRS += python
 endif
 
 ACLOCAL_AMFLAGS = -I m4
