--- a/mate-menus/configure.ac
+++ b/mate-menus/configure.ac
@@ -1,7 +1,6 @@
 AC_PREREQ(2.62)
 
-AC_INIT([mate-menus], [2.30.4],
-        [http://bugzilla.mate.org/enter_bug.cgi?product=mate-menus])
+AC_INIT([mate-menus], [2011.09.12], [https://github.com/perberos/mate-desktop-environment])
 AC_CONFIG_SRCDIR(libmenu/gmenu-tree.h)
 
 AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2])
@@ -140,8 +139,6 @@ layout/Makefile
 desktop-directories/Makefile
 util/Makefile
 python/Makefile
-simple-editor/Makefile
-simple-editor/GMenuSimpleEditor/Makefile
 po/Makefile.in
 ])
 
