--- a/mate-menus/layout/Makefile.in
+++ b/mate-menus/layout/Makefile.in
@@ -255,8 +255,8 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 menudir = $(sysconfdir)/xdg/menus
 menu_DATA = \
-	applications.menu	\
-	settings.menu
+	mate-applications.menu	\
+	mate-settings.menu
 
 EXTRA_DIST = $(menu_DATA)
 all: all-am
