changing MarcoTheme for MetacityTheme

--- a/mate-themes/desktop-themes/Clearlooks/index.theme.in
+++ b/mate-themes/desktop-themes/Clearlooks/index.theme.in
@@ -1,8 +1,8 @@
-[X-MATE-Metatheme]
+[X-GNOME-Metatheme]
 _Name=Clearlooks
-Type=X-MATE-Metatheme
+Type=X-GNOME-Metatheme
 _Comment=Attractive Usability
 Encoding=UTF-8
 GtkTheme=Clearlooks
-MarcoTheme=Clearlooks
+MetacityTheme=Clearlooks
 IconTheme=mate
