--- a/mate-themes/desktop-themes/ClearlooksTest/index.theme.in
+++ b/mate-themes/desktop-themes/ClearlooksTest/index.theme.in
@@ -1,8 +1,8 @@
-[X-MATE-Metatheme]
+[X-GNOME-Metatheme]
 _Name=Clearlooks Test Theme
-Type=X-MATE-Metatheme
+Type=X-GNOME-Metatheme
 _Comment=Theme with a different colorscheme to find problems in applications.
 Encoding=UTF-8
 GtkTheme=ClearlooksTest
-MarcoTheme=Clearlooks
+MetacityTheme=Clearlooks
 IconTheme=mate
