--- a/mate-themes/desktop-themes/Glider/index.theme.in
+++ b/mate-themes/desktop-themes/Glider/index.theme.in
@@ -1,8 +1,8 @@
-[X-MATE-Metatheme]
+[X-GNOME-Metatheme]
 _Name=Glider
-Type=X-MATE-Metatheme
+Type=X-GNOME-Metatheme
 _Comment=Simple, smooth and aesthetically pleasing
 Encoding=UTF-8
 GtkTheme=Glider
-MarcoTheme=Glider
+MetacityTheme=Glider
 IconTheme=mate
