--- a/mate-themes/desktop-themes/Glossy/index.theme.in
+++ b/mate-themes/desktop-themes/Glossy/index.theme.in
@@ -1,8 +1,8 @@
-[X-MATE-Metatheme]
+[X-GNOME-Metatheme]
 _Name=Glossy
-Type=X-MATE-Metatheme
+Type=X-GNOME-Metatheme
 _Comment=A glossy looking theme
 Encoding=UTF-8
 GtkTheme=Glossy
-MarcoTheme=Glossy
+MetacityTheme=Glossy
 IconTheme=mate
