--- a/mate-themes/desktop-themes/HighContrast/index.theme.in
+++ b/mate-themes/desktop-themes/HighContrast/index.theme.in
@@ -1,10 +1,10 @@
 [Desktop Entry]
-Type=X-MATE-Metatheme
+Type=X-GNOME-Metatheme
 _Name=High Contrast
 _Comment=Black-on-white text and icons
 Encoding=UTF-8
 
-[X-MATE-Metatheme]
+[X-GNOME-Metatheme]
 GtkTheme=HighContrast
 IconTheme=HighContrast
-MarcoTheme=Atlanta
+MetacityTheme=Atlanta
