--- a/mate-themes/desktop-themes/Crux/index.theme.in
+++ b/mate-themes/desktop-themes/Crux/index.theme.in
@@ -1,8 +1,8 @@
-[X-MATE-Metatheme]
+[X-GNOME-Metatheme]
 _Name=Crux
-Type=X-MATE-Metatheme
+Type=X-GNOME-Metatheme
 _Comment=Smooth gradients with purple highlights
 Encoding=UTF-8
 GtkTheme=Crux
-MarcoTheme=Crux
+MetacityTheme=Crux
 IconTheme=Crux
