--- a/mate-themes/desktop-themes/HighContrastInverse/index.theme.in
+++ b/mate-themes/desktop-themes/HighContrastInverse/index.theme.in
@@ -1,10 +1,10 @@
 [Desktop Entry]
-Type=X-MATE-Metatheme
+Type=X-GNOME-Metatheme
 _Name=High Contrast Inverse
 _Comment=White-on-black text and icons
 Encoding=UTF-8
 
-[X-MATE-Metatheme]
+[X-GNOME-Metatheme]
 GtkTheme=HighContrastInverse
 IconTheme=HighContrastInverse
-MarcoTheme=Atlanta
+MetacityTheme=Atlanta
