--- a/mate-themes/desktop-themes/HighContrastLargePrint/index.theme.in.in
+++ b/mate-themes/desktop-themes/HighContrastLargePrint/index.theme.in.in
@@ -1,13 +1,13 @@
 [Desktop Entry]
-Type=X-MATE-Metatheme
+Type=X-GNOME-Metatheme
 _Name=High Contrast Large Print
 _Comment=Large black-on-white text and icons
 Encoding=UTF-8
 
-[X-MATE-Metatheme]
+[X-GNOME-Metatheme]
 GtkTheme=HighContrastLargePrint
 IconTheme=HighContrast
-MarcoTheme=Atlanta
+MetacityTheme=Atlanta
 ApplicationFont=@LARGEPRINT_FONT@
 DocumentsFont=@LARGEPRINT_DOCUMENTS_FONT@
 DesktopFont=@LARGEPRINT_DESKTOP_FONT@
