--- a/mate-themes/desktop-themes/LowContrast/index.theme.in
+++ b/mate-themes/desktop-themes/LowContrast/index.theme.in
@@ -1,10 +1,10 @@
 [Desktop Entry]
-Type=X-MATE-Metatheme
+Type=X-GNOME-Metatheme
 _Name=Low Contrast
 _Comment=Muted text and icons
 Encoding=UTF-8
 
-[X-MATE-Metatheme]
+[X-GNOME-Metatheme]
 GtkTheme=LowContrast
 IconTheme=mate
-MarcoTheme=Atlanta
+MetacityTheme=Atlanta
