--- a/mate-themes/desktop-themes/LowContrastLargePrint/index.theme.in.in
+++ b/mate-themes/desktop-themes/LowContrastLargePrint/index.theme.in.in
@@ -1,13 +1,13 @@
 [Desktop Entry]
-Type=X-MATE-Metatheme
+Type=X-GNOME-Metatheme
 _Name=Low Contrast Large Print
 _Comment=Large muted text and icons
 Encoding=UTF-8
 
-[X-MATE-Metatheme]
+[X-GNOME-Metatheme]
 GtkTheme=LowContrastLargePrint
 IconTheme=mate
-MarcoTheme=Atlanta
+MetacityTheme=Atlanta
 ApplicationFont=@LARGEPRINT_FONT@
 DesktopFont=@LARGEPRINT_DESKTOP_FONT@
 MonospaceFont=@LARGEPRINT_MONOSPACE_FONT@
