--- a/mate-themes/desktop-themes/Mist/index.theme.in
+++ b/mate-themes/desktop-themes/Mist/index.theme.in
@@ -1,8 +1,8 @@
-[X-MATE-Metatheme]
+[X-GNOME-Metatheme]
 _Name=Mist
-Type=X-MATE-Metatheme
+Type=X-GNOME-Metatheme
 _Comment=A minimalistic appearance
 Encoding=UTF-8
 GtkTheme=Mist
-MarcoTheme=Mist
+MetacityTheme=Mist
 IconTheme=Mist
