actualizando numero de version

--- a/mate-corba/linc2/src/Makefile.in
+++ b/mate-corba/linc2/src/Makefile.in
@@ -34,7 +34,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@OS_WIN32_FALSE@bin_PROGRAMS = matecorba-linc-cleanup-sockets$(EXEEXT)
+@OS_WIN32_FALSE@bin_PROGRAMS =  \
+@OS_WIN32_FALSE@	matecorba-linc-cleanup-sockets$(EXEEXT)
 @OS_WIN32_FALSE@am__append_1 = -D_GNU_SOURCE
 subdir = linc2/src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
@@ -57,12 +58,11 @@ liblinc_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(liblinc_la_LDFLAGS) $(LDFLAGS) -o $@
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_linc_cleanup_sockets_OBJECTS = cleanup.$(OBJEXT)
-linc_cleanup_sockets_OBJECTS = $(am_linc_cleanup_sockets_OBJECTS)
-linc_cleanup_sockets_LDADD = $(LDADD)
-linc_cleanup_sockets_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
-	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
-	$(linc_cleanup_sockets_LDFLAGS) $(LDFLAGS) -o $@
+matecorba_linc_cleanup_sockets_SOURCES =  \
+	matecorba-linc-cleanup-sockets.c
+matecorba_linc_cleanup_sockets_OBJECTS =  \
+	matecorba-linc-cleanup-sockets.$(OBJEXT)
+matecorba_linc_cleanup_sockets_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -76,8 +76,8 @@ CCLD = $(CC)
 LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) \
 	$(LDFLAGS) -o $@
-SOURCES = $(liblinc_la_SOURCES) $(linc_cleanup_sockets_SOURCES)
-DIST_SOURCES = $(liblinc_la_SOURCES) $(linc_cleanup_sockets_SOURCES)
+SOURCES = $(liblinc_la_SOURCES) matecorba-linc-cleanup-sockets.c
+DIST_SOURCES = $(liblinc_la_SOURCES) matecorba-linc-cleanup-sockets.c
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -355,9 +355,9 @@ clean-binPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-matecorba-linc-cleanup-sockets$(EXEEXT): $(linc_cleanup_sockets_OBJECTS) $(linc_cleanup_sockets_DEPENDENCIES) 
+matecorba-linc-cleanup-sockets$(EXEEXT): $(matecorba_linc_cleanup_sockets_OBJECTS) $(matecorba_linc_cleanup_sockets_DEPENDENCIES) 
 	@rm -f matecorba-linc-cleanup-sockets$(EXEEXT)
-	$(linc_cleanup_sockets_LINK) $(linc_cleanup_sockets_OBJECTS) $(linc_cleanup_sockets_LDADD) $(LIBS)
+	$(LINK) $(matecorba_linc_cleanup_sockets_OBJECTS) $(matecorba_linc_cleanup_sockets_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -365,13 +365,13 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cleanup.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/linc-compat.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/linc-connection.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/linc-protocols.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/linc-server.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/linc-source.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/linc.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/matecorba-linc-cleanup-sockets.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
