--- a/mate-corba/src/services/name/Makefile.in
+++ b/mate-corba/src/services/name/Makefile.in
@@ -78,11 +78,11 @@ am__installdirs = "$(DESTDIR)$(libdir)" "$(DESTDIR)$(libdir)" \
 	"$(DESTDIR)$(libMateCORBAservicesincludedir)"
 LIBRARIES = $(lib_LIBRARIES)
 ARFLAGS = cru
-libname_server_2_a_AR = $(AR) $(ARFLAGS)
-libname_server_2_a_LIBADD =
-am_libname_server_2_a_OBJECTS = matecorba-name-server.$(OBJEXT) \
-	CosNaming-skels.$(OBJEXT) name-support.$(OBJEXT)
-libname_server_2_a_OBJECTS = $(am_libname_server_2_a_OBJECTS)
+libname_matecorba_server_2_a_AR = $(AR) $(ARFLAGS)
+libname_matecorba_server_2_a_LIBADD =
+libname_matecorba_server_2_a_SOURCES = libname-matecorba-server-2.c
+libname_matecorba_server_2_a_OBJECTS =  \
+	libname-matecorba-server-2.$(OBJEXT)
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libMateCORBACosNaming_2_la_LIBADD =
 am_libMateCORBACosNaming_2_la_OBJECTS = CosNaming-common.lo \
@@ -123,10 +123,10 @@ CCLD = $(CC)
 LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) \
 	$(LDFLAGS) -o $@
-SOURCES = $(libname_server_2_a_SOURCES) \
+SOURCES = libname-matecorba-server-2.c \
 	$(libMateCORBACosNaming_2_la_SOURCES) \
 	$(matecorba_name_server_2_SOURCES) $(name_client_2_SOURCES)
-DIST_SOURCES = $(libname_server_2_a_SOURCES) \
+DIST_SOURCES = libname-matecorba-server-2.c \
 	$(libMateCORBACosNaming_2_la_SOURCES) \
 	$(matecorba_name_server_2_SOURCES) $(name_client_2_SOURCES)
 DATA = $(idl_DATA)
@@ -424,9 +424,9 @@ uninstall-libLIBRARIES:
 
 clean-libLIBRARIES:
 	-test -z "$(lib_LIBRARIES)" || rm -f $(lib_LIBRARIES)
-libname-matecorba-server-2.a: $(libname_server_2_a_OBJECTS) $(libname_server_2_a_DEPENDENCIES) 
+libname-matecorba-server-2.a: $(libname_matecorba_server_2_a_OBJECTS) $(libname_matecorba_server_2_a_DEPENDENCIES) 
 	-rm -f libname-matecorba-server-2.a
-	$(libname_server_2_a_AR) libname-matecorba-server-2.a $(libname_server_2_a_OBJECTS) $(libname_server_2_a_LIBADD)
+	$(libname_matecorba_server_2_a_AR) libname-matecorba-server-2.a $(libname_matecorba_server_2_a_OBJECTS) $(libname_matecorba_server_2_a_LIBADD)
 	$(RANLIB) libname-matecorba-server-2.a
 install-libLTLIBRARIES: $(lib_LTLIBRARIES)
 	@$(NORMAL_INSTALL)
@@ -484,10 +484,9 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CosNaming-common.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CosNaming-skels.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CosNaming-stubs.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/boot.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/matecorba-name-server.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libname-matecorba-server-2.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/name-client.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/name-support.Po@am__quote@
 
