--- a/mate-menus/libmenu/Makefile.am
+++ b/mate-menus/libmenu/Makefile.am
@@ -2,7 +2,7 @@ lib_LTLIBRARIES = libmate-menu.la
 
 AM_CPPFLAGS =				\
 	$(GLIB_CFLAGS)			\
-	-DGMENU_I_KNOW_THIS_IS_UNSTABLE	\
+	-DMATEMENU_I_KNOW_THIS_IS_UNSTABLE	\
 	$(DISABLE_DEPRECATED_CFLAGS)	\
 	$(DEBUG_CFLAGS)
 
@@ -10,13 +10,13 @@ AM_CFLAGS = $(WARN_CFLAGS)
 
 libmate_menu_includedir = $(includedir)/mate-menus
 libmate_menu_include_HEADERS =		\
-	gmenu-tree.h
+	matemenu-tree.h
 
 libmate_menu_sources =			\
 	canonicalize.c			\
 	desktop-entries.c		\
 	entry-directories.c		\
-	gmenu-tree.c			\
+	matemenu-tree.c			\
 	menu-layout.c			\
 	menu-monitor.c			\
 	menu-util.c
@@ -26,7 +26,7 @@ libmate_menu_la_SOURCES =		\
 	canonicalize.h			\
 	desktop-entries.h		\
 	entry-directories.h		\
-	gmenu-tree.h			\
+	matemenu-tree.h			\
 	menu-layout.h			\
 	menu-monitor.h			\
 	menu-util.h
@@ -37,7 +37,7 @@ libmate_menu_la_LIBADD = 		\
 libmate_menu_la_LDFLAGS =			\
 	-version-info $(LIB_MENU_LT_VERSION)	\
 	-no-undefined				\
-	-export-symbols-regex gmenu_tree
+	-export-symbols-regex matemenu_tree
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libmate-menu.pc
@@ -58,13 +58,13 @@ if HAVE_INTROSPECTION
 # Note: we only include the headers here so far because there's no gtk-doc at all anyway
 introspection_sources = $(libmate_menu_include_HEADERS)
 
-GMenu-2.0.gir: libmate-menu.la
-GMenu_2_0_gir_INCLUDES = GObject-2.0
-GMenu_2_0_gir_CFLAGS = $(AM_CPPFLAGS)
-GMenu_2_0_gir_LIBS = libmate-menu.la
-GMenu_2_0_gir_SCANNERFLAGS = --pkg-export=libmate-menu
-GMenu_2_0_gir_FILES = $(addprefix $(srcdir)/,$(introspection_sources))
-INTROSPECTION_GIRS += GMenu-2.0.gir
+MateMenu-2.0.gir: libmate-menu.la
+MateMenu_2_0_gir_INCLUDES = GObject-2.0
+MateMenu_2_0_gir_CFLAGS = $(AM_CPPFLAGS)
+MateMenu_2_0_gir_LIBS = libmate-menu.la
+MateMenu_2_0_gir_SCANNERFLAGS = --pkg-export=libmate-menu
+MateMenu_2_0_gir_FILES = $(addprefix $(srcdir)/,$(introspection_sources))
+INTROSPECTION_GIRS += MateMenu-2.0.gir
 
 girdir = $(INTROSPECTION_GIRDIR)
 gir_DATA = $(INTROSPECTION_GIRS)
